Restart project again with Gson and authentication

--- a/UltraQuizzAPI/build.gradle
+++ b/UltraQuizzAPI/build.gradle
@@ -33,10 +33,12 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     compile "io.ktor:ktor-server-core:$ktor_version"
-    compile "io.ktor:ktor-html-builder:$ktor_version"
-    compile "io.ktor:ktor-jackson:$ktor_version"
+    compile "io.ktor:ktor-auth:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-core-jvm:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-auth-basic:$ktor_version"
+    compile "io.ktor:ktor-client-logging-jvm:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
